# zephyros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Zephyros.sln  Zephyros.vcxproj  Zephyros.vcxproj.filters  macros.cmake
Zephyros.xcodeproj/: project.pbxproj
Zephyros.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Zephyros.xcodeproj/project.xcworkspace/xcshareddata/: GhostlabMac.xccheckout  Zephyros.xccheckout
Zephyros.xcodeproj/xcshareddata/xcschemes/: Ghostlab.xcscheme
api/: native.d.ts
app/: index.html
app/css/: screen.css
app/js/: mock-app.js
lib/Chromium Embedded Framework.framework/Resources/: Info.plist  cef.pak  cef_100_percent.pak  crash_inspector
lib/Chromium Embedded Framework.framework/Resources/am.lproj/: locale.pak
lib/CrashRpt/: Readme.txt
lib/CrashRpt/Win32/: CrashRpt1402.lib
lib/CrashRpt/x64/: CrashRpt1402.lib
lib/Libcef/: libcef_dll_wrapper.vcxproj  libcef_dll_wrapper.vcxproj.filters
lib/Libcef/DLL/: readme.txt
lib/Libcef/Include/: cef_pack_strings.h
lib/Sparkle.framework/Versions/A/: Sparkle
lib/cef/DLL/: readme.txt
lib/cef/include/: cef_pack_resources.h  cef_pack_strings.h  cef_version.h
lib/cef/libcef_dll/: CMakeLists.txt
lib/winsparkle/: winsparkle.h
lib/winsparkle/win32/: WinSparkle.lib
lib/winsparkle/x64/: WinSparkle.lib
sample/: Zephyros_SampleApp.vcxproj  Zephyros_SampleApp.vcxproj.filters
sample/app/: index.html  main.js  style.css
sample/application/: CMakeLists.txt  CMakeLists_.txt  Zephyros_SampleApp.vcxproj
sample/application/app/: index.html  main.js  style.css
sample/application/res/linux/: content.S  content.h  content.s
sample/application/res/mac/: Info-AppStore.plist  Info-CEF-Helper.plist  Info-CEF.plist  Info-WebView.plist  content.h  icon.icns
sample/application/res/mac/Base.lproj/: MainMenu.xib
sample/application/res/windows/: Zephyros_SampleApp.rc  Zephyros_Sample_App.rc  app.rc  content.rc  resource.h
sample/application/src/: Resource.h  app.cpp  stdafx.h
sample/license-backend/: base32.php  generate-activation.php  generate-deactivation.php  generate-demotokens.php  generate-license.php  license.php  privateKey.pem  publicKey.pem
sample/res/mac/: Info-AppStore.plist  Info-CEF-Helper.plist  main.cpp  main.mm
sample/res/windows/: RCa05232  content.cpp
sample/src/: app.cpp  app.h  stdafx.cpp  stdafx.h
scripts/: add_win_resources.py  copy_dlls.bat
src/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  GLMenuItem.h  GLMenuItem.mm  GLWebView.h  GLWebView.mm  NSData+Base64.h  NSData+Base64.mm  Zephyros.h  app.cpp  app.h  app.rc  app_mac.mm  app_webview.mm  app_win.cpp  base32.cpp  base64.cpp  client_app.cpp  client_app.h  client_handler.cpp  client_handler.h  client_handler_mac.mm  client_handler_win.cpp  extension_handler.cpp  extension_handler.h  file_util.h  file_util_mac.mm  file_util_win.cpp  jsbridge.cpp  jsbridge.h  jsbridge_v8.h  jsbridge_webview.cpp  jsbridge_webview.h  licensing.h  main.m  native_extensions.cpp  native_extensions.h  network_util.h  network_util_mac.mm  (+17 more)
src/base/: LicenseCheckWindowController.h  LicenseCheckWindowController.mm  ZPYAppDelegate.h  ZPYAppDelegate.mm  ZPYMenuHandler.h  ZPYMenuHandler.mm  ZPYTouchBarHandler.h  ZPYTouchBarHandler.mm  app.cpp  app.h  app_linux.cpp  app_mac.mm  app_win.cpp  jsbridge.cpp  jsbridge.h  licensing.cpp  licensing.h  licensing_linux.cpp  licensing_mac.mm  licensing_stub.cpp  licensing_win.cpp  logging.h  types.h  zephyros_impl.cpp  zephyros_impl.h  zephyros_strings.h
src/base/cef/: ZPYCEFAppDelegate.h  ZPYCEFAppDelegate.mm  ZPYWindowDelegate.h  ZPYWindowDelegate.mm  app_scheme_handler.cpp  app_scheme_handler.h  cef_app.cpp  client_app.cpp  client_app.h  client_handler.cpp  client_handler.h  client_handler_linux.cpp  client_handler_mac.mm  client_handler_mac_stub.mm  client_handler_win.cpp  extension_handler.cpp  extension_handler.h  jsbridge_v8.h  local_scheme_handler.cpp  local_scheme_handler.h  mime_types.cpp  mime_types.h  process_helper_mac.mm  resource_util.h  resource_util_linux.cpp  resource_util_mac.mm  resource_util_posix.cpp  resource_util_win.cpp  string_util.cpp  string_util.h  util.h  v8_util.cpp  v8_util.h  zephyros_cef.h  zephyros_cef_linux.cpp  zephyros_cef_mac.mm  zephyros_cef_mac_stub.mm  zephyros_cef_win.cpp  zephyros_cef_win.h
src/base/webview/: ZPYWebViewAppDelegate.h  ZPYWebViewAppDelegate.mm  jsbridge_webview.cpp  jsbridge_webview.h  webview_extension.h  webview_extension.mm  zephyros_webview.mm
src/components/: LicenseCheckWindowController.h  LicenseCheckWindowController.mm  ZPYMenu.h  ZPYMenu.m  ZPYMenu.mm  ZPYMenuItem.h  ZPYMenuItem.mm  ZPYTouchBarItems.h  ZPYTouchBarItems.mm  ZPYWebView.h  ZPYWebView.mm  dialog_win.cpp  dialog_win.h
src/mac/: Info.plist
src/mac/Base.lproj/: MainMenu.xib
src/native_extensions/: browser.cpp  browser.h  browser_linux.cpp  browser_mac.mm  browser_win.cpp  custom_url_manager.cpp  custom_url_manager.h  error.cpp  error.h  error_linux.cpp  error_mac.mm  error_win.cpp  file_util.h  file_util_linux.cpp  file_util_mac.mm  file_util_win.cpp  file_watcher.cpp  file_watcher.h  file_watcher_linux.cpp  file_watcher_mac.mm  file_watcher_win.cpp  image_util_linux.cpp  image_util_linux.h  image_util_mac.h  image_util_mac.mm  image_util_win.cpp  image_util_win.h  native_extensions.cpp  native_extensions.h  network_util.h  network_util_linux.cpp  network_util_mac.mm  network_util_win.cpp  os_util.h  os_util_linux.cpp  os_util_mac.mm  os_util_mac_stub.mm  os_util_win.cpp  pageimage.h  pageimage_linux.cpp  (+13 more)
src/res/mac/: Info_ZephyrosAppStore.plist  LicenseCheckWindowController.xib  MainWindow.xib
src/res/windows/: readme.txt  resource.h
src/util/: EMKeychainItem.h  EMKeychainItem.m  GetPrimaryMACAddress.cpp  GetPrimaryMACAddress.h  MurmurHash3.cpp  MurmurHash3.h  NSData+Base64.h  NSData+Base64.mm  base32.cpp  base32.h  base64.cpp  base64.h  dataobject.cpp  dataobject.h  dropsource.cpp  dropsource.h  enumformat.h  picojson.h  string_util.cpp  string_util.h
tools/: README-TRANSFER.txt  generate_resources.bat  generate_resources.sh
(+96 files in other folders)
